[package]
name = "ecc-group-signature"
version = "0.1.0"
authors = ["akakou <akama@keio.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = { version="0.9.2", default-features=false }
num-bigint = { version="0.3.1", default-features=false } 
num-traits = { version="0.2.14", default-features = false}
hex-literal = "0.3.1"
rand = { version="0.7.3", default-features = false } 
rand_core = { version = "0.5.1", default-features = false }
curve25519-dalek = { version="3.0.2", features=["alloc", "u32_backend"], default-features = false }